edit cv, add portfolio links, fix img in contact.component

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -15,7 +15,7 @@
         <p>
             Uczę się głównie poprzez praktykę- pisząc kod i tworząc projekty. Ćwiczę na takich platformach jak
             edabit.com, codewars.com, frontendmentor.io. Wiedzę zdobywam czytajac oficjalne dokumentacje, blogi i fora. Realizuję
-            kursy internetowe np. strefakursów.pl, freecodecamp.org Wybrane projekty prezentuję na Githubie i Heroku.
+            kursy internetowe np. strefakursów.pl, freecodecamp.org. Wybrane projekty prezentuję na Githubie i Heroku.
         </p>
         <p>
             Gdzie widzę siebie za 5 lat? Na stanowisku solidny mid frontend developer :)
